--- a/index.html
+++ b/index.html
@@ -697,12 +697,26 @@
                                 <li>Email: info@ebike.com</li>
                             </ul>
                         </div>
+                        <div class="image">
+                            <img src="images/dathongbao.png" width="150" alt="" class="img-fluid">
+                        </div>
                     </div>
-                    <div class="col-md-4">
-                        <h1>Công ty cổ phần Ebike</h1>
+                    <div class="col-md-5">
+                        <h1 class="text-uppercase color-yellowLight">Công ty cổ phần Ebike</h1>
                         <div class="list">
                             <ul>
-                                <li></li>
+                                <li>ĐKKD/MST: 0313891315 do sở KH&DT TP.HCM cấp 04/07/2016</li>
+                                <li>Trụ sở: 100 Hải Thượng Lãn Ông, P.10, Quận 5, TP.HCM</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="payment">
+                            <ul>
+                                <li class="d-inline"><img src="images/visa.png" width="80" alt="" class="img-fluid"></li>
+                                <li class="d-inline"><img src="images/mastercard.png" width="80" alt="" class="img-fluid"></li>
+                                <li class="d-inline"><img src="images/discover.png" width="80" alt="" class="img-fluid"></li>
+                                <li class="d-inline"><img src="images/american.png" width="80" alt="" class="img-fluid"></li>
                             </ul>
                         </div>
                     </div>
