--- a/category.html
+++ b/category.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Category</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
@@ -170,7 +170,14 @@
                     </div>
                     <div class="price">
                         <h3>Giá:</h3>
-                        <input type="range" style="width: 100%;">
+                        <form oninput="x.value=parseInt(a.value)">
+                        <div style="display: flex;">
+                            <span>0</span>
+                            <input type="range" id="a" name="a" value="50" style="width: 100%;">
+                            <span>100%</span>
+                        </div>
+                        (<output name="x" for="a">50</output>%)
+                        </form>
                     </div>
                     <div class="contact">
                         <div class="name bg-blueLight color-yellowLight font-roboto">
