--- a/product.html
+++ b/product.html
@@ -470,6 +470,109 @@
                   </table>
                 </div>
               </div>
+              <!-- comment -->
+              <div class="comment">
+                <div class="comment__title">
+                  <hr>
+                  <span class="title__text bg-blueLight font-roboto">The world ebike.com</span>
+                  <span class="title__slogan color-blueLight">Luôn làm hài lòng khách hàng</span>
+                </div>
+                <div class="comment__star">
+                  <h4 class="color-blueLight">Đánh giá xe điện thể thao C24</h4>
+                  <div class="star__view">
+                    <div class="view__number">4.4</div>
+                    <div class="view__list">
+                      <span><i class="fa fa-star"></i></span>
+                      <span><i class="fa fa-star"></i></span>
+                      <span><i class="fa fa-star"></i></span>
+                      <span><i class="fa fa-star"></i></span>
+                      <span><i class="fa fa-star"></i></span>
+                    </div>
+                    <div class="view__show">
+                      <a href="/">165 đánh giá</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="comment__progress">
+                  <ul>
+                    <li>
+                      <span class="number">5</span>
+                      <span class="icon"><i class="fa fa-star"></i></span> 
+                      <div class="progress">
+                        <div class="progress-bar bg-warning" style="width:55%"></div>
+                     </div>
+                     <span>55%</span>
+                    </li>
+                    <li>
+                      <span class="number">4</span>
+                      <span class="icon"><i class="fa fa-star"></i></span> 
+                      <div class="progress">
+                        <div class="progress-bar bg-warning" style="width:34%"></div>
+                     </div>
+                     <span>34%</span>
+                    </li>
+                    <li>
+                      <span class="number">3</span>
+                      <span class="icon"><i class="fa fa-star"></i></span> 
+                      <div class="progress">
+                        <div class="progress-bar bg-warning" style="width:8%"></div>
+                     </div>
+                     <span>8%</span>
+                    </li>
+                    <li>
+                      <span class="number">2</span>
+                      <span class="icon"><i class="fa fa-star"></i></span> 
+                      <div class="progress">
+                        <div class="progress-bar bg-warning" style="width:1%"></div>
+                     </div>
+                     <span>1%</span>
+                    </li>
+                    <li>
+                      <span class="number">1</span>
+                      <span class="icon"><i class="fa fa-star"></i></span> 
+                      <div class="progress">
+                        <div class="progress-bar bg-warning" style="width:1%"></div>
+                     </div>
+                     <span>1%</span>
+                    </li>
+                  </ul>
+                </div>
+                <div class="comment__images">
+                  <div class="image">
+                    <img src="images/xemay.webp" alt="" class="img-fluid">
+                  </div>
+                  <div class="image">
+                    <img src="images/xemay.webp" alt="" class="img-fluid">
+                  </div>
+                  <div class="image">
+                    <img src="images/xemay.webp" alt="" class="img-fluid">
+                  </div>
+                  <div class="image">
+                    <img src="images/xemay.webp" alt="" class="img-fluid">
+                  </div>
+                  <div class="image">
+                    <img src="images/xemay.webp" alt="" class="img-fluid">
+                  </div>
+                </div>
+                <div class="comment__list">
+                  <div class="list__title">
+                    <span><b>Trần Văn Giàu</b></span>
+                    <span class="icon"><i class="fa fa-regular fa-circle-check"></i> Đã mua tại TGDG</span>
+                  </div>
+                  <div class="view__list">
+                    <span><i class="fa fa-star"></i></span>
+                    <span><i class="fa fa-star"></i></span>
+                    <span><i class="fa fa-star"></i></span>
+                    <span><i class="fa fa-star"></i></span>
+                    <span><i class="fa fa-star"></i></span>
+                    <span class="dash">|</span>
+                    <span>
+                      <i class="fa fa-heart"></i>
+                      Sẽ giới thiệu cho bạn bè, người thân
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col-md-5">
               <div class="specifications">
