--- a/product.html
+++ b/product.html
@@ -23,74 +23,62 @@
   <body>
     <header>
       <div class="container">
-        <div class="row text-uppercase align-items-center color-blueLight">
-          <div class="col-md-7">
-            <div class="row">
-              <div class="col-md-5">
-                <i class="fa fa-phone"></i> Mua hàng: 028 6253 9118
-              </div>
+          <div class="row text-uppercase align-items-center color-blueLight">
               <div class="col-md-7">
-                <i class="fa fa-phone"></i> Bảo hành: 028 6253 9118
+                  <div class="row">
+                      <div class="col-md-5">
+                          <i class="fa fa-phone"></i> Mua hàng: 028 6253 9118
+                      </div>
+                      <div class="col-md-7">
+                          <i class="fa fa-phone"></i> Bảo hành: 028 6253 9118
+                      </div>
+                  </div>
               </div>
-            </div>
+              <div class="col-md-5">
+                  <div class="row font-size-20 text-center">
+                      <div class="col-md-6 bg-yellowLight clip-path font-roboto">
+                          <strong><em>The world Ebike.com</em></strong>
+                      </div>
+                      <div class="col-md-6 bg-yellowLight clip-path">
+                          <b>Bảo hành 2 năm</b>
+                      </div>
+                  </div>
+              </div>
           </div>
-          <div class="col-md-5">
-            <div class="row font-size-20 text-center">
-              <div class="col-md-6 bg-yellowLight clip-path font-roboto">
-                <strong><em>The world Ebike.com</em></strong>
-              </div>
-              <div class="col-md-6 bg-yellowLight clip-path">
-                <b>Bảo hành 2 năm</b>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-      <div class="bg-blueLight p-10">
-        <div class="container">
+  </header>
+
+  <nav class="bg-blueLight p-10 sticky-top">
+      <div class="container">
           <div class="row align-items-center">
-            <div
-              class="col-md-4 color-yellowLight font-size-35 text-uppercase font-roboto"
-            >
-              <strong><em>The world Ebike.com</em></strong>
-            </div>
-            <div class="col-md-4">
-              <div class="input-group bg-white rounded-pill">
-                <input
-                  type="text"
-                  class="form-control rounded-pill border-0"
-                  placeholder="Tìm kiếm"
-                />
-                <button class="btn" type="submit">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                </button>
+              <div class="col-md-4 color-yellowLight font-size-35 text-uppercase font-roboto">
+                  <strong><em>The world Ebike.com</em></strong>
               </div>
-            </div>
-            <div class="col-md-3">
-              <ul class="text-uppercase menu d-flex justify-content-evenly">
-                <li><a href="" class="text-decoration-none">Sản phẩm</a></li>
-                <li><a href="" class="text-decoration-none">Dịch vụ</a></li>
-                <li><a href="" class="text-decoration-none">Tin tức</a></li>
-              </ul>
-            </div>
-            <div class="col-md-1">
-              <ul class="d-flex justify-content-evenly shopping">
-                <li>
-                  <a href="" class="text-decoration-none"
-                    ><i class="fa-solid fa-user"></i
-                  ></a>
-                </li>
-                <li>
-                  <a href="" class="text-decoration-none"
-                    ><i class="fa-solid fa-cart-shopping"></i
-                  ></a>
-                </li>
-              </ul>
-            </div>
+              <div class="col-md-4">
+                  <div class="input-group bg-white rounded-pill">
+                      <input type="text" class="form-control rounded-pill border-0" placeholder="Tìm kiếm">
+                      <button class="btn" type="submit">
+                          <i class="fa-solid fa-magnifying-glass"></i>
+                      </button>
+                  </div>
+              </div>
+              <div class="col-md-3">
+                  <ul class="text-uppercase menu d-flex justify-content-evenly">
+                      <li><a href="" class="text-decoration-none">Sản phẩm</a></li>
+                      <li><a href="" class="text-decoration-none">Dịch vụ</a></li>
+                      <li><a href="" class="text-decoration-none">Tin tức</a></li>
+                  </ul>
+              </div>
+              <div class="col-md-1">
+                  <ul class="d-flex justify-content-evenly shopping">
+                      <li><a href="" class="text-decoration-none"><i class="fa-solid fa-user"></i></a></li>
+                      <li><a href="" class="text-decoration-none"><i class="fa-solid fa-cart-shopping"></i></a>
+                      </li>
+                  </ul>
+              </div>
           </div>
-        </div>
       </div>
-    </header>
+  </nav>
 
     <main>
       <div class="container">
