--- a/index.html
+++ b/index.html
@@ -38,38 +38,39 @@
                 </div>
             </div>
         </div>
-        <div class="bg-blueLight p-10">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-4 color-yellowLight font-size-35 text-uppercase font-roboto">
-                        <strong><em>The world Ebike.com</em></strong>
+    </header>
+
+    <nav class="bg-blueLight p-10 sticky-top">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-4 color-yellowLight font-size-35 text-uppercase font-roboto">
+                    <strong><em>The world Ebike.com</em></strong>
+                </div>
+                <div class="col-md-4">
+                    <div class="input-group bg-white rounded-pill">
+                        <input type="text" class="form-control rounded-pill border-0" placeholder="Tìm kiếm">
+                        <button class="btn" type="submit">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
                     </div>
-                    <div class="col-md-4">
-                        <div class="input-group bg-white rounded-pill">
-                            <input type="text" class="form-control rounded-pill border-0" placeholder="Tìm kiếm">
-                            <button class="btn" type="submit">
-                                <i class="fa-solid fa-magnifying-glass"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <ul class="text-uppercase menu d-flex justify-content-evenly">
-                            <li><a href="" class="text-decoration-none">Sản phẩm</a></li>
-                            <li><a href="" class="text-decoration-none">Dịch vụ</a></li>
-                            <li><a href="" class="text-decoration-none">Tin tức</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-1">
-                        <ul class="d-flex justify-content-evenly shopping">
-                            <li><a href="" class="text-decoration-none"><i class="fa-solid fa-user"></i></a></li>
-                            <li><a href="" class="text-decoration-none"><i class="fa-solid fa-cart-shopping"></i></a>
-                            </li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="col-md-3">
+                    <ul class="text-uppercase menu d-flex justify-content-evenly">
+                        <li><a href="" class="text-decoration-none">Sản phẩm</a></li>
+                        <li><a href="" class="text-decoration-none">Dịch vụ</a></li>
+                        <li><a href="" class="text-decoration-none">Tin tức</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-1">
+                    <ul class="d-flex justify-content-evenly shopping">
+                        <li><a href="" class="text-decoration-none"><i class="fa-solid fa-user"></i></a></li>
+                        <li><a href="" class="text-decoration-none"><i class="fa-solid fa-cart-shopping"></i></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </header>
+    </nav>
 
     <main>
         <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -126,7 +127,6 @@
                 </div>
             </div>
         </div>
-        
         <div class="bestSeller">
             <div class="container">
                 <div class="box">
@@ -451,8 +451,10 @@
         <div class="youtube">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/MeBHGAQ8eYY?si=7qpbrlVXIgqGmASX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div class="col-md-6 position-relative">
+                        <!-- <iframe width="100%" height="315" src="https://www.youtube.com/embed/MeBHGAQ8eYY?si=7qpbrlVXIgqGmASX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                        <img src="images/video.jpeg" alt="" class="img-fluid">
+                        <span class="video"><i class="fa fa-play"></i></span>
                     </div>
                     <div class="col-md-6">
                         <div class="row">
