add sticky category

--- a/category.html
+++ b/category.html
@@ -180,7 +180,7 @@
                         (<output name="x" for="a">50</output>%)
                         </form>
                     </div>
-                    <div class="contact">
+                    <div class="contact sticky-top" style="top: 100px;z-index: 1000;">
                         <div class="name bg-blueLight color-yellowLight font-roboto">
                             The world ebike.com
                         </div>
