--- a/category.html
+++ b/category.html
@@ -204,8 +204,8 @@
                     <h1>Xe đạp thể thao đường phố</h1>
                     <div class="details">
                         <div class="row">
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-end border-bottom">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -222,8 +222,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-end border-bottom">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -240,8 +240,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-bottom">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -258,8 +258,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-end border-bottom">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -276,8 +276,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-end border-bottom">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -294,8 +294,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-bottom">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -312,8 +312,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-end border-bottom">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -330,8 +330,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-end border-bottom">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -348,8 +348,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-bottom">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -366,8 +366,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-end">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -384,8 +384,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products border-end">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
@@ -402,8 +402,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="products text-center">
+                            <div class="col-md-4 products">
+                                <div class="text-center">
                                     <a href="">
                                         <div class="image">
                                             <img src="images/4.webp" alt="" class="img-fluid">
