--- a/index.html
+++ b/index.html
@@ -139,13 +139,73 @@
                         </span>
                     </div>
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-3 border-end border-bottom">
                             <div class="p-t-b-20">
                                 <a href="" class="text-decoration-none">
                                     <div class="image">
                                         <img src="images/3.jpeg" alt="" class="img-fluid">
                                     </div>
-                                    <h2 class="text-center color-blueLight">Xe đạp điện trợ lực</h2>
+                                    <h2 class="text-center">Xe đạp điện trợ lực</h2>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 border-end border-bottom">
+                            <div class="p-t-b-20">
+                                <a href="" class="text-decoration-none">
+                                    <div class="image">
+                                        <img src="images/3.jpeg" alt="" class="img-fluid">
+                                    </div>
+                                    <h2 class="text-center">Xe đạp điện gấp gọn</h2>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 border-end border-bottom">
+                            <div class="p-t-b-20">
+                                <a href="" class="text-decoration-none">
+                                    <div class="image">
+                                        <img src="images/3.jpeg" alt="" class="img-fluid">
+                                    </div>
+                                    <h2 class="text-center">Xe đạp điện thể thao</h2>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 border-bottom">
+                            <div class="p-t-b-20">
+                                <a href="" class="text-decoration-none">
+                                    <div class="image">
+                                        <img src="images/3.jpeg" alt="" class="img-fluid">
+                                    </div>
+                                    <h2 class="text-center">Xe cân bằng điện</h2>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 border-end">
+                            <div class="p-t-b-20">
+                                <a href="" class="text-decoration-none">
+                                    <div class="image">
+                                        <img src="images/3.jpeg" alt="" class="img-fluid">
+                                    </div>
+                                    <h2 class="text-center">Xe đạp điện trợ lực</h2>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 border-end">
+                            <div class="p-t-b-20">
+                                <a href="" class="text-decoration-none">
+                                    <div class="image">
+                                        <img src="images/3.jpeg" alt="" class="img-fluid">
+                                    </div>
+                                    <h2 class="text-center">Xe đạp điện gấp gọn</h2>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 border-end">
+                            <div class="p-t-b-20">
+                                <a href="" class="text-decoration-none">
+                                    <div class="image">
+                                        <img src="images/3.jpeg" alt="" class="img-fluid">
+                                    </div>
+                                    <h2 class="text-center">Xe đạp điện thể thao</h2>
                                 </a>
                             </div>
                         </div>
@@ -155,67 +215,7 @@
                                     <div class="image">
                                         <img src="images/3.jpeg" alt="" class="img-fluid">
                                     </div>
-                                    <h2 class="text-center color-blueLight">Xe đạp điện gấp gọn</h2>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="p-t-b-20">
-                                <a href="" class="text-decoration-none">
-                                    <div class="image">
-                                        <img src="images/3.jpeg" alt="" class="img-fluid">
-                                    </div>
-                                    <h2 class="text-center color-blueLight">Xe đạp điện thể thao</h2>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="p-t-b-20">
-                                <a href="" class="text-decoration-none">
-                                    <div class="image">
-                                        <img src="images/3.jpeg" alt="" class="img-fluid">
-                                    </div>
-                                    <h2 class="text-center color-blueLight">Xe cân bằng điện</h2>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="p-t-b-20">
-                                <a href="" class="text-decoration-none">
-                                    <div class="image">
-                                        <img src="images/3.jpeg" alt="" class="img-fluid">
-                                    </div>
-                                    <h2 class="text-center color-blueLight">Xe đạp điện trợ lực</h2>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="p-t-b-20">
-                                <a href="" class="text-decoration-none">
-                                    <div class="image">
-                                        <img src="images/3.jpeg" alt="" class="img-fluid">
-                                    </div>
-                                    <h2 class="text-center color-blueLight">Xe đạp điện gấp gọn</h2>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="p-t-b-20">
-                                <a href="" class="text-decoration-none">
-                                    <div class="image">
-                                        <img src="images/3.jpeg" alt="" class="img-fluid">
-                                    </div>
-                                    <h2 class="text-center color-blueLight">Xe đạp điện thể thao</h2>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="p-t-b-20">
-                                <a href="" class="text-decoration-none">
-                                    <div class="image">
-                                        <img src="images/3.jpeg" alt="" class="img-fluid">
-                                    </div>
-                                    <h2 class="text-center color-blueLight">Xe cân bằng điện</h2>
+                                    <h2 class="text-center">Xe cân bằng điện</h2>
                                 </a>
                             </div>
                         </div>
@@ -226,8 +226,8 @@
         <div class="details">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-end border-bottom">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -244,8 +244,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-end border-bottom">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -262,8 +262,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-end border-bottom">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -280,8 +280,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-bottom">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -298,8 +298,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-end border-bottom">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -316,8 +316,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-end border-bottom">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -334,8 +334,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-end border-bottom">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -352,8 +352,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-bottom">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -370,8 +370,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-end">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -388,8 +388,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-end">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -406,8 +406,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products border-end">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -424,8 +424,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="products text-center">
+                    <div class="col-md-3 products">
+                        <div class="text-center">
                             <a href="">
                                 <div class="image">
                                     <img src="images/4.webp" alt="" class="img-fluid">
@@ -444,7 +444,7 @@
                     </div>
                 </div>
                 <div class="more text-center">
-                    <span><a href="" class="color-blueLight text-decoration-none">Xem thêm...</a></span>
+                    <span><a href="" class="color-blueLight text-decoration-none">Xem thêm</a></span>
                 </div>
             </div>
         </div>
@@ -509,7 +509,7 @@
                     </div>
                 </div>
                 <div class="more text-center">
-                    <span><a href="" class="color-blueLight text-decoration-none">Xem thêm...</a></span>
+                    <span><a href="" class="color-blueLight text-decoration-none">Xem thêm</a></span>
                 </div>
             </div>
         </div>
@@ -562,7 +562,7 @@
                     </div>
                 </div>
                 <div class="more text-center">
-                    <span><a href="" class="color-blueLight text-decoration-none">Xem thêm...</a></span>
+                    <span><a href="" class="color-blueLight text-decoration-none">Xem thêm</a></span>
                 </div>
             </div>
         </div>
@@ -620,7 +620,7 @@
                 </div>
             </div>
             <div class="more text-center">
-                <span><a href="" class="color-blueLight text-decoration-none">Xem thêm hệ thống cửa hàng...</a></span>
+                <span><a href="" class="color-blueLight text-decoration-none">Xem thêm hệ thống cửa hàng</a></span>
             </div>
         </div>
     </main>
